[refactor]->Cambios hasta la clase 10

--- a/angular.json
+++ b/angular.json
@@ -79,7 +79,21 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "staging": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -89,6 +103,9 @@
           "configurations": {
             "production": {
               "buildTarget": "store:build:production"
+            },
+            "staging": {
+              "buildTarget": "store:build:staging"
             },
             "development": {
               "buildTarget": "store:build:development"
