--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format": "prettier --write src"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +31,8 @@
     "@angular/compiler-cli": "^19.1.6",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
