--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~19.1.7",
     "@angular/compiler-cli": "^19.1.6",
     "@types/jasmine": "~4.3.0",
+    "angular-eslint": "^19.4.0",
     "autoprefixer": "^10.4.16",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
