--- a/package.json
+++ b/package.json
@@ -7,29 +7,35 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "serve:ssr:store": "node dist/store/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.6",
-    "@angular/common": "^19.1.6",
-    "@angular/compiler": "^19.1.6",
-    "@angular/core": "^19.1.6",
-    "@angular/forms": "^19.1.6",
-    "@angular/platform-browser": "^19.1.6",
-    "@angular/platform-browser-dynamic": "^19.1.6",
-    "@angular/router": "^19.1.6",
+    "@angular/animations": "^19.2.10",
+    "@angular/common": "^19.2.10",
+    "@angular/compiler": "^19.2.10",
+    "@angular/core": "^19.2.10",
+    "@angular/forms": "^19.2.10",
+    "@angular/platform-browser": "^19.2.10",
+    "@angular/platform-browser-dynamic": "^19.2.10",
+    "@angular/platform-server": "^19.2.10",
+    "@angular/router": "^19.2.10",
+    "@angular/ssr": "^19.2.12",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "wavesurfer.js": "^7.3.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@angular/cli": "~19.1.7",
-    "@angular/compiler-cli": "^19.1.6",
+    "@angular-devkit/build-angular": "^19.2.12",
+    "@angular/cli": "~19.2.12",
+    "@angular/compiler-cli": "^19.2.10",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.18.0",
     "angular-eslint": "^19.4.0",
     "autoprefixer": "^10.4.16",
     "eslint-config-prettier": "^10.1.5",
