--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "wavesurfer.js": "^7.3.2",
-    "zone.js": "~0.15.0"
+    "wavesurfer.js": "^7.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.12",
